--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,11 +1,3 @@
-ul,
-ol {
-    list-style-type: none;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-}
-
 .gallery {
     width: 1128px;
     display: flex;
@@ -30,6 +22,25 @@ ol {
 .sl-wrapper .sl-navigation button.sl-next,
 .sl-wrapper .sl-navigation button.sl-prev,
 .sl-wrapper button.sl-close,
-div.sl-wrapper .sl-counter{
+div.sl-wrapper .sl-counter {
     color: #FFFFFF;
+}
+
+.go-back-link {
+    display: inline-block;
+    border-radius: 8px;
+    background: #7532b8;
+    color: #FFF;
+    padding: 4px;
+
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.04em;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.go-back-link:hover,
+.go-back-link:focus {
+    background-color: #8f45d9;
 }
