--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,4 +7,23 @@
 
 @import url('./reset.css');
 @import url('./gallery.css');
+@import url('./form.css');
 
+.nav-link {
+  display: inline-block;
+  border-radius: 8px;
+  background: #7532b8;
+  color: #FFF;
+  padding: 4px;
+
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+  .nav-link:hover,
+  .nav-link:focus {
+  background-color: #8f45d9;
+}
